--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -18,7 +18,9 @@
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+         <a href="https://beian.miit.gov.cn/" target="_blank"> 蜀ICP备2023037063号</a>
     </span>
+
 </footer>
 {{- end }}
 
