--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -18,7 +18,11 @@
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-         <a href="https://beian.miit.gov.cn/" target="_blank"> 蜀ICP备2023037063号</a>
+    </span>
+    <span style="display: flex;align-items: center;justify-content: center; gap: 5px;" >
+        <a href="https://beian.miit.gov.cn/" target="_blank"> 蜀ICP备2023037063号</a>
+        <img alt="图片" src="./备案图标.png" style="width: 16px;height: 16px;"/>
+        <a href="https://beian.mps.gov.cn/#/query/webSearch?code=51162202511780" rel="noreferrer" target="_blank">川公网安备51162202511780</a>
     </span>
 
 </footer>
